# scrapper

./: .env.example  404.html  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  index.html  mcp-config.example.json  pyproject.toml  requirements.in  sitemap.xml
app/: mcp_server.py  settings.py
load_testing/: load_test.py
search/: search_index.json
