[project]
name = "scrapper"
version = "1.0.0"
description = "Web scraper with a simple REST API living in Docker and using a Headless browser and Readability.js for parsing"
authors = [
    {name = "Alexander Merkurev", email = "apps.merkurev@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    # Core web framework
    "fastapi~=0.127.0",
    "uvicorn[standard]~=0.40.0",
    "jinja2~=3.1.6",
    "python-dotenv~=1.2.1",

    # Data validation
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "validators~=0.35.0",

    # Browser automation
    "playwright~=1.57.0",

    # HTML parsing
    "beautifulsoup4~=4.13.3",
    "tldextract~=5.3.0",

    # Security (authentication)
    "bcrypt~=4.2.1",

    # MCP server
    "mcp~=1.25.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
    "coverage~=7.6.10",
    "httpx~=0.28.1",  # for testing HTTP clients

    # Code quality & linting
    "ruff~=0.14.10",
    "pylint~=4.0.2",
]

[project.urls]
Homepage = "https://scrapper.dev"
Documentation = "https://github.com/amerkurev/scrapper#usage"
Repository = "https://github.com/amerkurev/scrapper"
Issues = "https://github.com/amerkurev/scrapper/issues"

[project.scripts]
scrapper = "main:main"
scrapper-mcp = "mcp_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
package-dir = {"" = "app"}

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["app"]
pythonpath = ["app"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
